syntax = "proto3";

package slogger_transporter;

option go_package = "services/grpc_manager_gen";

service GrpcManager {
  rpc Stop(GrpcManagerStopRequest) returns (GrpcManagerStopResponse) {}
}

message GrpcManagerStopRequest {
  string message = 1;
}

message GrpcManagerStopResponse {
  bool success = 1;
  string message = 2;
}
